SERVER-68994 Fix AUTO_CAUSES_COPY coverity errors